# mini-game-engine

./: .gitignore  CMakeLists.txt  README.md
assets/: coin tilemap.csv  collider tilemap.csv  main tilemap.csv  sky tilemap.csv
src/: GameObject.hpp  Tileset.hpp  gameobject.cpp  main.cpp  tileset.cpp
